PE_4_project/force-app/main/default/objects/Book__c/Book__c.object-meta.xml
<CustomObject>
    <description>Stores book records for the Library Management System</description>
    <label>Book</label>
    <nameField>
        <label>Book Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>