PE_4_project/force-app/main/default/objects/Book__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <description>Author of the book</description>
    <label>Author</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>