PE_4_project/force-app/main/default/objects/Book__c/fields/Available_Copies__c.field-meta.xml
<CustomField>
    <fullName>Available_Copies__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number of copies currently available for issue</description>
    <label>Available Copies</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>