PE_4_project/force-app/main/default/objects/Book__c/fields/Publication_Year__c.field-meta.xml
<CustomField>
    <fullName>Publication_Year__c</fullName>
    <description>Year the book was published</description>
    <label>Publication Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>