PE_4_project/force-app/main/default/objects/Book__c/fields/Publisher__c.field-meta.xml
<CustomField>
    <fullName>Publisher__c</fullName>
    <description>Publisher of the book</description>
    <label>Publisher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>