PE_4_project/force-app/main/default/objects/Book__c/fields/Total_Copies__c.field-meta.xml
<CustomField>
    <fullName>Total_Copies__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Total number of copies available in the library</description>
    <label>Total Copies</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>